CHATS_SIT/force-app/main/default/objects/Case_Review_Response__c.object
<CustomObject>
    <fields>
        <fullName>Action_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Action Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Required__c</fullName>
        <label>Is Action Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actions Taken</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseReview_Cause1__c</fullName>
        <label>Cause for Error #1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00857</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseReview_Cause2__c</fullName>
        <label>Cause for Error #2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00857</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseReview_Cause3__c</fullName>
        <label>Cause for Error #3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00857</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseReview_Error1__c</fullName>
        <label>Error #1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00860</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseReview_Error2__c</fullName>
        <label>Error #2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00860</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseReview_Error3__c</fullName>
        <label>Error #3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00860</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseReview_NA_Reason__c</fullName>
        <label>N/A Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00861</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseReview_QuestionMain__c</fullName>
        <label>Element Question Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00859</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Review__c</fullName>
        <label>Case Review</label>
        <referenceTo>Case_Review__c</referenceTo>
        <relationshipLabel>Case Review Responses</relationshipLabel>
        <relationshipName>Case_Review_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Element__c</fullName>
        <formula>Review_Question__r.Element__c</formula>
        <label>Element</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observation_Details_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Observation Details &amp; Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Review Question</label>
        <referenceTo>Review_Question__c</referenceTo>
        <relationshipLabel>Case Review Responses</relationshipLabel>
        <relationshipName>Case_Review_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Causes_Payment_Error__c</fullName>
        <label>Causes Payment Error?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <label>Case Review Response</label>
    <nameField>
        <displayFormat>CRR{000000}</displayFormat>
        <label>Case Review Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Review Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>